bdr.BDR.scala.code
if (litMessage()=="A")
	avance();
if (litMessage()=="R")
	droite(); avance();
if (litMessage()=="L")
	gauche(); avance();
if (litMessage()=="I")
	gauche();gauche();avance();
if (litMessage()==B)
	avance(); avance();
if (litMessage()=="C")
	avance(); avance(); avance();
if (litMessage()=="Z")
	recule()
if (litMessage()=="Y")
	recule(); recule();
if (LitMessage()=="X")
	recule(); recule(); recule();